Update styles and permissions to toggle

--- a/public/popup.html
+++ b/public/popup.html
@@ -3,28 +3,20 @@
 <html>
 <head>
   <title>Masa Data Manager</title>
-  <style>
-    body {
-      min-width: 250px;
-      padding: 10px;
-      font-family: Arial, sans-serif;
-    }
-    button {
-      margin: 5px;
-      padding: 5px 10px;
-    }
-    .description {
-      margin-bottom: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <h1>Masa Data Manager</h1>
   <p class="description">
     Take control of your browsing data. With Masa Data Manager, you can choose to monetize your data and participate in quests and campaigns on the Masa zk-Data Network. Grant permission to start tracking your data or revoke it at any time.
   </p>
-  <button id="grant-permission">Grant Permission</button>
-  <button id="revoke-permission">Revoke Permission</button>
+  <div class="permission-toggle">
+    <span>Enable Tracking:</span>
+    <label class="toggle-switch">
+      <input type="checkbox" id="toggle-permission">
+      <span class="slider round"></span>
+    </label>
+  </div>
   <script src="popup.js"></script>
 </body>
 </html>
