--- a/public/popup.html
+++ b/public/popup.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
+  <div class="logo-container">
+    <img src="logo-black-2x.png" alt="Masa Black Logo" id="logo">
+  </div>
   <h1>Masa Data Manager</h1>
   <p class="description">
     Take control of your browsing data. With Masa Data Manager, you can choose to monetize your data and participate in quests and campaigns on the Masa zk-Data Network. Grant permission to start tracking your data or revoke it at any time.
