--- a/public/popup.html
+++ b/public/popup.html
@@ -1,25 +1,31 @@
 <!-- public/popup.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Masa Data Manager</title>
-  <link rel="stylesheet" href="popup.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Masa Data Manager</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <div class="logo-container">
-    <img src="logo-black-2x.png" alt="Masa Black Logo" id="logo">
-  </div>
-  <h1>Masa Data Manager</h1>
-  <p class="description">
-    Take control of your browsing data. With Masa Data Manager, you can choose to monetize your data and participate in quests and campaigns on the Masa zk-Data Network. Grant permission to start tracking your data or revoke it at any time.
-  </p>
-  <div class="permission-toggle">
-    <span>Enable Tracking:</span>
-    <label class="toggle-switch">
-      <input type="checkbox" id="toggle-permission">
-      <span class="slider round"></span>
-    </label>
-  </div>
-  <script src="popup.js"></script>
+    <div class="logo-container">
+        <img src="logo-black-2x.png" alt="Masa Black Logo" id="logo">
+    </div>
+    <h1>Masa Data Manager</h1>
+    <p class="description">
+        Take control of your browsing data. With Masa Data Manager, you can choose to monetize your data and participate in quests and campaigns on the Masa zk-Data Network. Grant permission to start tracking your data or revoke it at any time.
+    </p>
+    <button id="connect-metamask">Connect to MetaMask</button>
+    <!-- Display connected account -->
+    <div class="account-display" id="account-display"></div>
+    <!-- Permissions toggle -->
+    <div class="permission-toggle">
+        <span>Enable Tracking:</span>
+        <label class="toggle-switch">
+            <input type="checkbox" id="toggle-permission">
+            <span class="slider round"></span>
+        </label>
+    </div>
+    <script src="popup.js"></script>
 </body>
 </html>
