working mvp connecting to Metamask

--- a/public/popup.html
+++ b/public/popup.html
@@ -4,6 +4,6 @@
 <body>
     <button id="connectButton">Connect to MetaMask</button>
     <div id="accountAddress"></div>
-    <script src="popup.bundle.js"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
