Working dashboard and wallet connection

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="dashboard.css">
 </head>
 <body>
-    <h1>Extension Dashboard</h1>
+    <div class="header">
+        <h1>Extension Dashboard</h1>
+        <div class="top-right-container">
+            <button id="walletButton">Connect Wallet</button>
+        </div>
+    </div>
     <!-- Add dashboard content here -->
     <script src="dashboard.js"></script>
 </body>
