--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,6 +13,10 @@
             <button id="walletButton">Connect Wallet</button>
         </div>
     </div>
+    <!-- Add this inside the body tag of public/dashboard.html -->
+    <div class="staking-container">
+        <button id="stakeDataButton">Stake Data</button>
+    </div>
     <!-- Add dashboard content here -->
     <script src="dashboard.js"></script>
 </body>
