Update dashboard to include data locker :lock:

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,7 +17,65 @@
             <button id="walletButton">Connect Wallet</button>
         </div>
     </div>
-    <!-- Add dashboard content here -->
+    
+    <!-- Data locker section -->
+    <div class="data-locker">
+        <h2>Your personal data locker</h2>
+        <div class="data-category">
+            <h3>Browser data</h3>
+            <div class="data-points">
+                <!-- Browser data points -->
+                <div class="data-point">
+                    <img src="path-to-logo/page-views.png" alt="Page Views">
+                    <p>Page Views</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/wallet-connected.png" alt="Wallet Connected">
+                    <p>Wallet Connected</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/login.png" alt="Login">
+                    <p>Login</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/mint.png" alt="Mint">
+                    <p>Mint</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/dex-trade.png" alt="DEX Trade">
+                    <p>DEX Trade</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/swap.png" alt="Swap">
+                    <p>Swap</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/bridge.png" alt="Bridge">
+                    <p>Bridge</p>
+                    <span>1.2k</span>
+                </div>
+                <div class="data-point">
+                    <img src="path-to-logo/other.png" alt="Other">
+                    <p>Other</p>
+                    <span>1.2k</span>
+                </div>
+            </div>
+        </div>
+        <div class="data-category">
+            <h3>Social data</h3>
+            <div class="data-points">
+                <!-- Social data points -->
+                <!-- Add your social data points here, similar to the browser data points -->
+            </div>
+        </div>
+    </div>
+
     <script src="dashboard.js"></script>
 </body>
 </html>
