--- a/public/referrals.html
+++ b/public/referrals.html
@@ -20,6 +20,8 @@
     <div class="content">
         <!-- Content for referrals page goes here -->
         <p>Welcome to the Referrals page. Share your referral link and earn rewards!</p>
+        <!-- iframe is needed to display referrals modal due to chrome CSP restrictions -->
+        <iframe style='width:100%; height:800px;' src='https://embed.referral-factory.com/TbZKsE' frameborder="0"></iframe>
     </div>
     <script src="referrals.js"></script> <!-- Link to the referrals TypeScript compiled output -->
 </body>
