working dash with data fetched for connected account

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,54 +26,44 @@
             <div class="data-points">
                 <!-- Browser data points -->
                 <div class="data-point">
-                    <img src="path-to-logo/page-views.png" alt="Page Views">
+                    <img src="page-views.png" alt="pageView">
                     <p>Page Views</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/wallet-connected.png" alt="Wallet Connected">
+                    <img src="wallet-connected.png" alt="connectWallet">
                     <p>Wallet Connected</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/login.png" alt="Login">
+                    <img src="login.png" alt="login">
                     <p>Login</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/mint.png" alt="Mint">
+                    <img src="mint.png" alt="mint">
                     <p>Mint</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/dex-trade.png" alt="DEX Trade">
+                    <img src="dex-trade.png" alt="trade">
                     <p>DEX Trade</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/swap.png" alt="Swap">
+                    <img src="swap.png" alt="swap">
                     <p>Swap</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
                 <div class="data-point">
-                    <img src="path-to-logo/bridge.png" alt="Bridge">
+                    <img src="bridge.png" alt="bridge">
                     <p>Bridge</p>
-                    <span>1.2k</span>
+                    <span>-</span>
                 </div>
-                <div class="data-point">
-                    <img src="path-to-logo/other.png" alt="Other">
-                    <p>Other</p>
-                    <span>1.2k</span>
-                </div>
+                <!-- Add more data points as needed -->
             </div>
         </div>
-        <div class="data-category">
-            <h3>Social data</h3>
-            <div class="data-points">
-                <!-- Social data points -->
-                <!-- Add your social data points here, similar to the browser data points -->
-            </div>
-        </div>
+        <!-- Add more data categories as needed -->
     </div>
 
     <script src="dashboard.js"></script>
