--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Dashboard</title>
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="react_dashboard.css">
 </head>
 <body>
     <div class="header">
@@ -66,6 +67,9 @@
         <!-- Add more data categories as needed -->
     </div>
 
+    <div id="root"></div>
+
     <script src="dashboard.js"></script>
+    <script src="react_dashboard.js"></script>
 </body>
 </html>
