refactor: initial layout setup for dashboard, scss modules

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,68 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="dashboard.css">
+    <!-- <link rel="stylesheet" href="dashboard.css"> -->
     <link rel="stylesheet" href="react_dashboard.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Extension Dashboard</h1>
-        <nav class="header-nav">
-            <a href="/dashboard.html" class="nav-link active">Dashboard</a>
-            <a href="/referrals.html" class="nav-link">Referrals</a>
-        </nav>
-        <div class="top-right-container">
-            <button id="walletButton">Connect Wallet</button>
-        </div>
-    </div>
+  <!-- <div class="header">
+       <h1>Extension Dashboard</h1>
+       <nav class="header-nav">
+       <a href="/dashboard.html" class="nav-link active">Dashboard</a>
+       <a href="/referrals.html" class="nav-link">Referrals</a>
+       </nav>
+       <div class="top-right-container">
+       <button id="walletButton">Connect Wallet</button>
+       </div>
+       </div> -->
     
     <!-- Data locker section -->
-    <div class="data-locker">
-        <h2>Your personal data locker</h2>
-        <div class="data-category">
-            <h3>Browser data</h3>
-            <div class="data-points">
-                <!-- Browser data points -->
-                <div class="data-point">
-                    <img src="page-views.png" alt="pageView">
-                    <p>Page Views</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="wallet-connected.png" alt="connectWallet">
-                    <p>Wallet Connected</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="login.png" alt="login">
-                    <p>Login</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="mint.png" alt="mint">
-                    <p>Mint</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="dex-trade.png" alt="trade">
-                    <p>DEX Trade</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="swap.png" alt="swap">
-                    <p>Swap</p>
-                    <span>-</span>
-                </div>
-                <div class="data-point">
-                    <img src="bridge.png" alt="bridge">
-                    <p>Bridge</p>
-                    <span>-</span>
-                </div>
-                <!-- Add more data points as needed -->
-            </div>
-        </div>
-        <!-- Add more data categories as needed -->
-    </div>
+  <!-- <div class="data-locker">
+       <h2>Your personal data locker</h2>
+       <div class="data-category">
+       <h3>Browser data</h3>
+       <div class="data-points">
+
+       <div class="data-point">
+       <img src="page-views.png" alt="pageView">
+       <p>Page Views</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="wallet-connected.png" alt="connectWallet">
+       <p>Wallet Connected</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="login.png" alt="login">
+       <p>Login</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="mint.png" alt="mint">
+       <p>Mint</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="dex-trade.png" alt="trade">
+       <p>DEX Trade</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="swap.png" alt="swap">
+       <p>Swap</p>
+       <span>-</span>
+       </div>
+       <div class="data-point">
+       <img src="bridge.png" alt="bridge">
+       <p>Bridge</p>
+       <span>-</span>
+       </div>
+       </div>
+       </div>
+       </div> -->
 
     <div id="root"></div>
 
